--- a/pom.xml
+++ b/pom.xml
@@ -17,22 +17,50 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <junit.version>3.8.1</junit.version>
   </properties>
 
-	<build>        
-	<finalName>${project.artifactId}</finalName> 
-	</build>
+	<build> 
+    <finalName>${project.artifactId}</finalName> 
+    <plugins>
+      <plugin>
+       <groupId>org.apache.maven.plugins</groupId> 
+        <artifactId>maven-jar-plugin</artifactId> 
+        <version>2.4</version> 
+        <configuration>
+          <archive> 
+            <manifest> 
+              <mainClass>dev.App</mainClass> 
+            </manifest> 
+           </archive> 
+        </configuration> 
+       </plugin>
+       <!-- config plugin shade -->
+       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.0.0</version>
+        <executions> 
+          <execution>
+             <phase>package</phase>
+             <goals>
+              <goal>shade</goal>
+             </goals> 
+            </execution>
+          </executions>
+      </plugin>
+    </plugins> 
+  </build>
 
-
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    <groupId>com.github.lalyos</groupId>
-    <artifactId>jfiglet</artifactId>
-    <version>0.0.3</version>
-</dependency>
-  </dependencies>
+    <dependencies>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+         <version>${junit.version}</version>
+          <scope>test</scope>
+      </dependency>
+       <dependency>
+         <groupId>com.github.lalyos</groupId>
+          <artifactId>jfiglet</artifactId>
+         <version>0.0.3</version>
+       </dependency>
+      </dependencies>
+       
 </project>
